// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="ax-tip--top ax-tip--success ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[` 2`] = `
<div
  className="ax-tip--top ax-tip--warning ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[` 3`] = `
<div
  className="ax-tip--top ax-tip--error ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[` 4`] = `
<div
  className="ax-tip--top ax-tip--info ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[` 5`] = `
<div
  className="ax-tip--top ax-tip--shade-1 ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[` 6`] = `
<div
  className="ax-tip--top ax-tip--shade-2 ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[` 7`] = `
<div
  className="ax-tip--top ax-tip--shade-3 ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[` 8`] = `
<div
  className="ax-tip--top ax-tip--shade-4 ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[`Tip renders with arrowRef 1`] = `
<div
  className="ax-tip--top ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[`Tip renders with defaultProps 1`] = `
<div
  className="ax-tip--top ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[`Tip renders with direction bottom 1`] = `
<div
  className="ax-tip--bottom ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[`Tip renders with direction left 1`] = `
<div
  className="ax-tip--left ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[`Tip renders with direction right 1`] = `
<div
  className="ax-tip--right ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[`Tip renders with direction top 1`] = `
<div
  className="ax-tip--top ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[`Tip renders with position 1`] = `
<div
  className="ax-tip--top ax-tip--shadow"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={
      Object {
        "left": "1rem",
      }
    }
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;

exports[`Tip renders without shadow 1`] = `
<div
  className="ax-tip--top"
>
  <span
    className="ax-tip__arrow ax-tip__arrow--medium"
    style={Object {}}
  />
  <div
    className="ax-tip__content"
  >
    <div
      className=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus sit amet dolor tempus ornare ac eget dolor. Pellentesque ultrices iaculis nunc, tempor tempus magna vehicula ut. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam iaculis quam ut metus finibus, et facilisis risus porta.
    </div>
  </div>
</div>
`;
